# fairypptx

./: .editorconfig  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
MEMORY/: _from_jsonast.py
fairypptx/: __init__.py  application.py  box.py  color.py  constants.py  df_table.py  fill_format.py  font.py  image_utils.py  line_format.py  markdown.py  paragraph_format.py  presentation.py  registory_utils.py  registry_utils.py  sample.py  shape.py  shape_range.py  shapes.py  slide.py  slide_range.py  slides.py  table.py  text.py  text_frame.py  text_range.py
fairypptx/_constants/: MSO.py  MSPPT.py
fairypptx/_markdown/: __init__.py  box_editor.py  box_interpreter.py  html_clipboard.py  pandoc.py
fairypptx/_shape/: __init__.py  api_factory.py  fill_format.py  line_format.py  location.py  mixins.py  property.py  replace.py  scratch.py  selector.py  stylist.py
fairypptx/_slide/: __init__.py  grid_handler.py
fairypptx/_table/: __init__.py  cell.py  cell_containers.py  stylist.py  table_api_writer.py
fairypptx/_text/: __init__.py  font.py  paragraph_format.py  textrange_formatter.py  textrange_stylist.py
fairypptx/core/: application.py  models.py  protocols.py  types.py  utils.py
fairypptx/editjson/: fill_format.py  font.py  line_format.py  paragraph_format.py  protocols.py  shape.py  style_type_registry.py  table.py  text_frame.py  text_range.py  utils.py
fairypptx/enums/: __init__.py
fairypptx/inner/: README.md  __init__.py  inspection.py  make.py  storage.py
fairypptx/object_utils/: __init__.py
fairypptx/parts/: __init__.py  latex.py  location.py  markdown.py  palette.py
fairypptx/registry_utils/: __init__.py  structure_registry.py  temporary_path.py  (+1 more)
tests/: test_box.py  test_color.py  test_editjson.py  test_fill_format.py  test_group_shape.py  test_line_format.py  test_markdown.py  test_object_utils.py  test_registry_utils.py  test_resitory_utils.py  test_shape.py  test_shape_range.py  test_shapes.py  test_slide.py  test_slide_range.py  test_slides.py  test_styles.py  test_table.py  test_text_range.py  test_textrange.py  text_textrange.py
(+101 files in other folders)
