[metadata]
name = fairypptx
version = 0.0.1
description = faries flustter around you.
long_description = file: README.md
license = MIT

[aliases]
test=pytest

[tool:pytest]
addopts =  --cov fairypptx --cov-report html

[flake8]
max-line-length = 120
select = C,E,F,W,B,B950
ignore = E203, E501, W503
output-file = flake8.txt
tee = true

[format]
root = figpptx 
